--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div class="line"></div>
 				<img src="./assets/azrieli.jpg" alt="Azrieli">
             </div>
-            <div class="slide bcg azrieli" name="Caffe">
+            <div class="slide bcg caffe" name="Caffe">
 				<div class="line"></div>
 				<img src="./assets/caffe.jpg" alt="Caffe">
 			</div>
