--- a/index.html
+++ b/index.html
@@ -7,37 +7,36 @@
 <body>
 	<div class="containter">
 		<h1>CSS3 Cycle Slider</h1>
-		<div class="pictures">
-			<div class="slide bcg jaffa" name="Jaffa Port">
+		<div class="photos">
+			<div class="slide bcg beach" name="Alma Beach">
 				<div class="line"></div>
-				<img src="./assets/‏jaffa.jpg" alt="Jaffa"  >
+				<img src="./assets/almabeach.jpg" alt="alma">
 			</div>
-			<div class="slide bcg beach" name="Beach">
+			<div class="slide bcg azrieli" name="Azrieli">
 				<div class="line"></div>
-				<img src="./assets/beach.jpg" alt="Beach" >
+				<img src="./assets/azrieli2.jpg" alt="azrieli">
 			</div>
-			<div class="slide bcg carmel" name="Carmel Market">
+			<div class="slide bcg jaffaport" name="Jaffa Port">
 				<div class="line"></div>
-				<img src="./assets/karmel.jpg" alt="Carmel">
+				<img src="./assets/jaffaport.jpg" alt="jaffaport">
 			</div>
-			<div class="slide bcg old-jaffa" name="Old-jaffa">
+			<div class="slide bcg winter" name="Winter">
 				<div class="line"></div>
-				<img src="./assets/jaffa2.jpg" alt="Old-Jaffa" >
+				<img src="./assets/winterbeach.jpg" alt="winter" >
 			</div>
 			<div class="slide bcg kerem" name="Kerem">
 				<div class="line"></div>
-				<img src="./assets/kerem.jpg" alt="Kerem" >
+				<img src="./assets/kerem2.jpg" alt="Kerem" >
             </div>
-            <div class="slide bcg azrieli" name="Azrieli">
+            <div class="slide bcg dizingoff" name="Dizingoff">
 				<div class="line"></div>
-				<img src="./assets/azrieli.jpg" alt="Azrieli">
+				<img src="./assets/telaviv.jpg" alt="dizingoff">
             </div>
-            <div class="slide bcg caffe" name="Caffe">
+            <div class="slide bcg old-city" name="Old City">
 				<div class="line"></div>
-				<img src="./assets/caffe.jpg" alt="Caffe">
-			</div>
-		</div>
-
-	</div>
+				<img src="./assets/oldcity.jpg" alt="old-city">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
